# simpleplan

./: Cargo.toml  index.html  simpleplan-52348d29e95de069.js  simpleplan-52348d29e95de069_bg.wasm  simpleplan-7f6c6c53aa7b9fd8.js  simpleplan-7f6c6c53aa7b9fd8_bg.wasm  trunk.toml
.github/workflows/: pages.yml
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/atoms/: main_title.rs
src/components/molecules/: lm_table.rs  mod.rs
src/components/organisms/: appview.rs  mod.rs
src/ressources/: daten.json
src/styles/: table.css
