[package]
name = "simpleplan"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
gloo = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
stylist = { version = "0.13.0", features = ["yew", "yew_integration", "yew_use_style", "parser"] }
yew = { version = "0.21.0", features = ["csr"] }
